--- a/Werewolf.uproject
+++ b/Werewolf.uproject
@@ -1,9 +1,7 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "5.5",
 	"Category": "",
 	"Description": "",
-	"Plugins": [
-		
-	]
+	"Plugins": []
 }
