--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -3,3 +3,12 @@
 [/Script/UnrealEd.EditorPerformanceProjectSettings]
 RealtimeScreenPercentageMode=BasedOnDPIScale
 
+[/Script/UnrealEd.BlueprintEditorProjectSettings]
+bForceAllDependenciesToRecompile=False
+bValidateUnloadedSoftActorReferences=True
+bEnableChildActorExpansionInTreeView=False
+bAllowImpureToPureNodeConversion=False
+DefaultChildActorTreeViewMode=ComponentOnly
++SuppressedDeprecationMessages=/Script/Engine.SkinnedMeshComponent:SkeletalMesh
+bDisallowEditorUtilityBlueprintFunctionsInDetailsView=False
+
